@@ -1,3 +1,4 @@
+* Fix Session:id() function
 * Improve loading of phplib - load only what is needed
 
 Version 2.2.3
